force-app/main/default/objects/Case/fields/Date_Of_Expected_Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Expected_Delivery_Service__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date customer expects the delivery/service to be completed</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Only applicable for dispute reason:
·         Goods or services purchased but not received</inlineHelpText>
    <label>Date Of Expected Delivery/Service</label>
    <type>Date</type>
</CustomField>