force-app/main/default/objects/Case/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <description>Credit or debit transaction posted date</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Credit or debit transaction posted date</inlineHelpText>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>