force-app/main/default/objects/Case/fields/Date_Time_Bug_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Bug_Occurred__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date/time the customer encountered this bug.</description>
    <inlineHelpText>The date/time the customer encountered this bug.</inlineHelpText>
    <label>Date/Time Bug Occurred</label>
    <type>DateTime</type>
</CustomField>