force-app/main/default/objects/Case/fields/Date_Time_Provisionally_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Provisionally_Closed__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Date the case is marked as provisionally closed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Provisionally Closed</label>
    <type>DateTime</type>
</CustomField>