force-app/main/default/objects/Case/fields/Date_time_Registration_Response_Provided__c.field-meta.xml
<CustomField>
    <fullName>Date_time_Registration_Response_Provided__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date/Time when AFCA Registration Response Provided checked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/time Registration Response Provided</label>
    <type>DateTime</type>
</CustomField>