force-app/main/default/objects/Case/fields/DateOfBirthOnIDMatchesProfile__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthOnIDMatchesProfile__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates the Date of Birth on the ID provided matches with the Customer&apos;s current profile</description>
    <inlineHelpText>The date of birth shown on the identity document must match the birthdate currently held in their profile.</inlineHelpText>
    <label>Date of Birth on ID matches profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>