force-app/main/default/objects/Case/fields/DateOfEvent__c.field-meta.xml
<CustomField>
    <fullName>DateOfEvent__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date of the Marriage Ceremony</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Event</label>
    <type>Date</type>
</CustomField>