force-app/main/default/objects/Case/fields/Debit_or_Credit__c.field-meta.xml
<CustomField>
    <fullName>Debit_or_Credit__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>Credit/debit transaction</description>
    <inlineHelpText>Credit/debit transaction</inlineHelpText>
    <label>Debit or Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>