force-app/main/default/objects/Case/fields/Debit_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Debit_User_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>The name of the merchant which has performed the direct debit as derived from the transaction description</description>
    <inlineHelpText>The name of the merchant which has performed the direct debit as derived from the transaction description</inlineHelpText>
    <label>Debit User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>