force-app/main/default/objects/Case/fields/Disable_CMOS_Omni__c.field-meta.xml
<CustomField>
    <fullName>Disable_CMOS_Omni__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Tells if CMOS user has Omni enabled</description>
    <formula>$Setup.IDR_Omni_Settings__c.Disable_CMOS_Omni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable CMOS Omni</label>
    <type>Checkbox</type>
</CustomField>