force-app/main/default/objects/Case/fields/Dispute_Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Raised_By__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Field to indicate which customer raised the dispute for Joint account disputes</description>
    <label>Dispute Raised By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>The joint accountholder</fullName>
            </value>
            <value>
                <fullName>This customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>