force-app/main/default/objects/Case/fields/Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Non_Personal_Information</complianceGroup>
    <description>To select dispute reason related to the ATM transaction</description>
    <inlineHelpText>Please select dispute reason</inlineHelpText>
    <label>Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount not received by payee</fullName>
            </value>
            <value>
                <fullName>Cancellation of regular payment arrangement was unsuccessful</fullName>
            </value>
            <value>
                <fullName>Duplicate Transaction</fullName>
            </value>
            <value>
                <fullName>Unauthorised Transaction</fullName>
            </value>
            <value>
                <fullName>Trace Request</fullName>
            </value>
            <value>
                <fullName>Cash Dispensing Error</fullName>
            </value>
            <value>
                <fullName>Urgent Dishonour Request</fullName>
            </value>
            <value>
                <fullName>Don&apos;t recognise the transaction</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t authorise transaction</fullName>
            </value>
            <value>
                <fullName>Duplicate Transactions</fullName>
            </value>
            <value>
                <fullName>Charged more than once</fullName>
            </value>
            <value>
                <fullName>Charged Incorrect Amount</fullName>
            </value>
            <value>
                <fullName>Charged for a cancelled payment</fullName>
            </value>
            <value>
                <fullName>Refund error</fullName>
            </value>
            <value>
                <fullName>Product Didn&apos;t Arrive</fullName>
            </value>
            <value>
                <fullName>Product Defective or Unsatisfactory</fullName>
            </value>
            <value>
                <fullName>Incorrect BSB/ Account number</fullName>
            </value>
            <value>
                <fullName>Incorrect Amount</fullName>
            </value>
            <value>
                <fullName>Payee has not received funds</fullName>
            </value>
            <value>
                <fullName>Fraudulent transaction</fullName>
            </value>
            <value>
                <fullName>Payment debited after debit authority cancelled</fullName>
            </value>
            <value>
                <fullName>Payment Duplicated</fullName>
            </value>
            <value>
                <fullName>Payment Overdrawn</fullName>
            </value>
            <value>
                <fullName>Unsolicited</fullName>
            </value>
            <value>
                <fullName>Incorrect Account Details</fullName>
            </value>
            <value>
                <fullName>Incorrect Amount Transferred</fullName>
            </value>
            <value>
                <fullName>Confirm Payee Name (Only for Salesforce)</fullName>
            </value>
            <value>
                <fullName>Return money received from an unknown person</fullName>
            </value>
            <value>
                <fullName>Claim not for value</fullName>
            </value>
            <value>
                <fullName>Incorrect Biller Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>