force-app/main/default/objects/Case/fields/Dispute_Reason_PayTo__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason_PayTo__c</fullName>
    <description>It will be used to show the dispute reasons for the PayTo dispute.</description>
    <label>Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Amount</fullName>
            </value>
            <value>
                <fullName>Duplicate Transaction</fullName>
            </value>
            <value>
                <fullName>Not as per agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>