force-app/main/default/objects/Case/fields/Dispute_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Subtype__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Incorrect Payee/Incorrect Account number/Payment not received by Recipient</description>
    <inlineHelpText>Incorrect Payee/Incorrect Account number/Payment not received by Recipient</inlineHelpText>
    <label>Dispute Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dispute_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Payee or Payment Address</fullName>
            </value>
            <value>
                <fullName>Duplicate Amount</fullName>
            </value>
            <value>
                <fullName>Incorrect Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>