force-app/main/default/objects/Case/fields/DocumentFailureReason__c.field-meta.xml
<CustomField>
    <fullName>DocumentFailureReason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The reason why customer verification failed during LegalName process</description>
    <label>Document Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>