force-app/main/default/objects/Case/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Type of Document which Customer has provided to verify.</description>
    <inlineHelpText>The document selected in this field should match the identity document captured by the customer.
    This field should only be edited in the case that the customer has incorrectly done this.</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOCUMENT_TYPE_AUSTRALIAN_BIRTH_CERTIFICATE</fullName>
                <label>Australian Birth Certificate</label>
            </value>
            <value>
                <fullName>DOCUMENT_TYPE_AUSTRALIAN_CHANGE_OF_NAME_CERTIFICATE</fullName>
                <label>Australian Change of Name Certificate</label>
            </value>
            <value>
                <fullName>DOCUMENT_TYPE_AUSTRALIAN_DRIVERS_LICENCE</fullName>
                <label>Australian Driver&apos;s Licence</label>
            </value>
            <value>
                <fullName>DOCUMENT_TYPE_AUSTRALIAN_MARRIAGE_CERTIFICATE</fullName>
                <label>Australian Marriage Certificate</label>
            </value>
            <value>
                <fullName>DOCUMENT_TYPE_AUSTRALIAN_PASSPORT</fullName>
                <label>Australian Passport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>