force-app/main/default/objects/Case/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <description>The number of hours since the issue was raised by the customer until the case is closed. System generated content.</description>
    <label>Duration Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>