force-app/main/default/objects/Case/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <label>Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>