force-app/main/default/objects/Case/fields/EDW_Origin__c.field-meta.xml
<CustomField>
    <fullName>EDW_Origin__c</fullName>
    <formula>CASE(TEXT(Origin),
&apos;Phone&apos;, &apos;2&apos;,
&apos;3&apos;,&apos;5&apos;,
&apos;4&apos;,&apos;6&apos;,
&apos;5&apos;,&apos;8&apos;,
&apos;Email&apos;, &apos;3&apos;,
&apos;6&apos;,&apos;8&apos;,
&apos;8&apos;,&apos;5&apos;,
&apos;9&apos;,&apos;8&apos;,
&apos;10&apos;,&apos;8&apos;,
&apos;11&apos;,&apos;7&apos;,
&apos;Chat&apos;,&apos;4&apos;,
&apos;ANZ Plus App&apos;,&apos;4&apos;,
&apos;12&apos;,&apos;8&apos;,
&apos;14&apos;,&apos;8&apos;,
&apos;15&apos;,&apos;8&apos;,
&apos;Other&apos;,&apos;8&apos;,
&apos;22&apos;,&apos;8&apos;,
&apos;23&apos;,&apos;8&apos;,
TEXT(Origin))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Received (EDW)</label>
    <type>Text</type>
</CustomField>