force-app/main/default/objects/Case/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>In the event a customer initiated any banking transactions on a weekend/public holiday - in the customer transaction history, the effective date will reflect as a public holiday date and posting date will be the next business day.</description>
    <inlineHelpText>Customer debit or credit transaction initiated/processed date</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>