force-app/main/default/objects/Case/fields/ePaymentsCodeApplicable__c.field-meta.xml
<CustomField>
    <fullName>ePaymentsCodeApplicable__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Where a reimbursement is paid to a customer under the ANZ Scam Payment Framework this field captures whether provisions of the ePayments code applied as well.</description>
    <label>ePayments Code Applicable</label>
    <type>Checkbox</type>
</CustomField>