force-app/main/default/objects/Case/fields/Evaluation_Complete_Time__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Complete_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_TrustMe</complianceGroup>
    <description>This field contains the Evaluation Complete Time populated by the Cloud Function during TrustMe case creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Evaluation Complete Time</label>
    <type>DateTime</type>
</CustomField>