force-app/main/default/objects/Case/fields/Evaluation_Id__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - TrustMe</complianceGroup>
    <description>This field contains the Evaluation Id populated by the Cloud Function during TrustMe case creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TrustMe Evaluation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>