force-app/main/default/objects/Case/fields/Evaluation_State__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_State__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_TrustMe</complianceGroup>
    <description>This field contains the Evaluation State populated by the Cloud Function during TrustMe case creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Evaluation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>