force-app/main/default/objects/Case/fields/Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_Outcome__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>What the customer expected to happen when they encountered the bug.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>What the customer expected to happen when they encountered the bug.</inlineHelpText>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>