force-app/main/default/objects/Case/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Expiry Date of the Passport / Driving Licence if provided by the Customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>