force-app/main/default/objects/Case/fields/External_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Case_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Case record Id in external system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Case record ID in external system.</inlineHelpText>
    <label>External Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>