force-app/main/default/objects/Case/fields/External_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Request_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_ANZPlusWebsite</complianceGroup>
    <description>Unique external id to prevent duplicate cases being created by the GCP in In-App Complaint Service</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Request Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>