force-app/main/default/objects/Case/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of the system where case was created.</description>
    <inlineHelpText>Name of external system.</inlineHelpText>
    <label>External System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARBe</fullName>
            </value>
            <value>
                <fullName>Pega_Smarts</fullName>
                <label>Pega Smarts</label>
            </value>
            <value>
                <fullName>Pega_PRS</fullName>
                <label>Pega PRS</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>