force-app/main/default/objects/Case/fields/External_System_Create_Datetime__c.field-meta.xml
<CustomField>
    <fullName>External_System_Create_Datetime__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date the case was created in the external system.</description>
    <inlineHelpText>Date created in external system.</inlineHelpText>
    <label>External System Create Datetime</label>
    <type>Date</type>
</CustomField>