force-app/main/default/objects/Case/fields/ExternalDisputeID__c.field-meta.xml
<CustomField>
    <fullName>ExternalDisputeID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>External Dispute ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Dispute ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>