force-app/main/default/objects/Case/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Qualtrics</complianceGroup>
    <description>Type of Qualtrics Feedback</description>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey</fullName>
                <default>true</default>
                <label>Survey</label>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>App Store Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>