force-app/main/default/objects/Case/fields/Financial_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Name__c</fullName>
    <formula>FinServ__FinancialAccount__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>