force-app/main/default/objects/Case/fields/Financial_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <formula>HYPERLINK (&apos;/&apos; &amp;  FinServ__FinancialAccount__c ,  FinServ__FinancialAccount__r.FinServ__FinancialAccountNumber__c, &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>