force-app/main/default/objects/Case/fields/FinServ__FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FinancialAccount__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>