force-app/main/default/objects/Case/fields/Followup_State__c.field-meta.xml
<CustomField>
    <fullName>Followup_State__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <formula>IF(OR(
    ISBLANK( Customer_First_Contacted__c ),
    ISPICKVAL(Status, &apos;Closed&apos;)
  ),
  NULL,
  IF( TODAY() - DATEVALUE(Customer_First_Contacted__c) &lt;= 7,
    IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Green Flag&apos;),
    IF(TODAY() - DATEVALUE(Customer_First_Contacted__c) &lt;= 14,
      IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;Yellow Flag&apos;),
      IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Red Flag&apos;)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Followup State</label>
    <type>Text</type>
</CustomField>