force-app/main/default/objects/Case/fields/Fraud_Address_Valid__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Address_Valid__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Check: 

The residential address populated in the customer profile in Fenergo can be reasonably understood to be a place where the person resides</description>
    <inlineHelpText>Check: 

The residential address populated in the customer profile in Fenergo can be reasonably understood to be a place where the person resides</inlineHelpText>
    <label>Residential address is valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>