force-app/main/default/objects/Case/fields/Fraud_Analytics_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analytics_Assignee__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Personal_Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LookUp field for FraudX_Agent or Join_Lead role for Fraud Analytics Investigation</description>
    <label>Analytics Assignee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>FraudX_Agent</value>
        </filterItems>
        <filterItems>
            <field>$UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Join_Lead</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>