force-app/main/default/objects/Case/fields/Fraud_Analytics_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analytics_Change_Type__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>List of Detection Uplift Implemented values in Fraud Analytics Investigation</description>
    <label>Detection Uplift Implemented</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Fraud_Analytics_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Falcon Rule</fullName>
            </value>
            <value>
                <fullName>Existing Falcon Rule Change</fullName>
            </value>
            <value>
                <fullName>New VRM Rule</fullName>
            </value>
            <value>
                <fullName>Existing VRM Rule Change</fullName>
            </value>
            <value>
                <fullName>New VCAS 3DS Rule</fullName>
            </value>
            <value>
                <fullName>Existing VCAS 3DS Rule Change</fullName>
            </value>
            <value>
                <fullName>New Lookup List</fullName>
            </value>
            <value>
                <fullName>Existing Lookup List Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>