force-app/main/default/objects/Case/fields/Fraud_Analytics_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analytics_Comments__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Comment on analytical description for Fraud Analytics Investigation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Analytics Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>