force-app/main/default/objects/Case/fields/Fraud_Analytics_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analytics_Date_Complete__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Completed review date for Fraud Analytics Investigation</description>
    <label>Date Review Complete</label>
    <type>Date</type>
</CustomField>