force-app/main/default/objects/Case/fields/Fraud_Analytics_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analytics_Outcome__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Outcome of detection uplifted review for Fraud Analytics Investigation</description>
    <label>Review Resulted in Detection Uplift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>