force-app/main/default/objects/Case/fields/Fraud_Analytics_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analytics_Rule_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Rule or List name for Fraud Analytics Investigation</description>
    <label>Rule/List Name</label>
    <type>TextArea</type>
</CustomField>